--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.18.5
-tqdm==4.49.0
+numpy>=1.18.5
+tqdm>=4.49.0
 tensorflow>=2.0.0
-joblib==0.16.0
-six==1.15.0
+joblib>=0.16.0
+six>=1.15.0
 easygraph==0.2.1
-gensim==3.8.3
-progressbar33==2.4
-scikit_learn==0.23.2
-scipy==1.5.2
+gensim>=3.8.3
+progressbar33>=2.4
+scikit_learn>=0.23.2
+scipy>=1.5.2
