--- a/.github/workflows/dummy_test.yaml
+++ b/.github/workflows/dummy_test.yaml
@@ -4,7 +4,8 @@ on: [push]
 
 jobs:
   build:
-    runs-on: [ubuntu-latest, windows, macos]
+    # runs-on: [ubuntu-latest, windows, macos]
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
