--- a/.github/workflows/dummy_test.yaml
+++ b/.github/workflows/dummy_test.yaml
@@ -1,6 +1,7 @@
 name: Python package
 
-on: [push]
+# on: [push]
+on: workflow_dispatch
 
 jobs:
   build:
@@ -32,4 +33,4 @@ jobs:
         run: yapf -i **/*.py
       - name: Test with pytest
         run: |
-          pytest#
+          pytest
