--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,10 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
-        os: [ubuntu-latest, macos-latest]
+        # os: [ubuntu-latest, macos-latest]
+        include:
+          - os: macos-latest
+          - os: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Set up Python 3.9
