--- a/.github/workflows/release-macos.yaml
+++ b/.github/workflows/release-macos.yaml
@@ -1,4 +1,4 @@
-name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
+name: Build and Publish to PyPI (macOS)
 
 on: push
 
@@ -7,20 +7,16 @@ jobs:
     # name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
     name: Build and publish Python 🐍 distributions 📦 to PyPI
     # runs-on: ubuntu-latest
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
-        # os: [ubuntu-latest, macos-latest]
-        include:
-          - os: macos-latest
-          - os: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v1
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
       - name: Install pypa/build
         run: >-
           python -m
@@ -35,11 +31,6 @@ jobs:
           --wheel
           --outdir dist/
           .
-      # - name: Publish distribution 📦 to Test PyPI
-      #   uses: pypa/gh-action-pypi-publish@master
-      #   with:
-      #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-      #     repository_url: https://test.pypi.org/legacy/
       - name: Publish distribution 📦 to PyPI
         # if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
