--- a/.github/workflows/release-macos.yaml
+++ b/.github/workflows/release-macos.yaml
@@ -1,6 +1,9 @@
 name: Build and Publish to PyPI (macOS)
 
-on: push
+# on: push
+# disabled on push cuz Error: Container action is only supported on Linux
+# no solution found yet
+on: workflow_dispatch
 
 jobs:
   build-n-publish:
