--- a/.github/workflows/release-manylinux.yaml
+++ b/.github/workflows/release-manylinux.yaml
@@ -42,7 +42,7 @@ jobs:
           # pre-build-command: "sh pre-build-script.sh"
           # package-path: "my_project"
           # pip-wheel-args: "-w ./dist --no-deps"
-          pip-wheel-args: "--sdist --wheel --outdir dist/"
+          # pip-wheel-args: "--sdist --wheel --outdir dist/"
       - name: Publish distribution 📦 to PyPI
         # if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
