Add test.yaml to test the package on push / PR
Now the build jobs and pub jobs will only run the tests have passed.

--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -1,7 +1,7 @@
 name: Build and upload to PyPI
 
 # Build on every branch push, tag push, and pull request change:
-on: [push, pull_request]
+# on: [push, pull_request]
 # Alternatively, to publish when a (published) GitHub Release is created, use the following:
 # on:
 #   push:
@@ -9,6 +9,12 @@ on: [push, pull_request]
 #   release:
 #     types:
 #       - published
+on:
+  workflow_run:
+    workflows: ["Test the package with pytest"]
+    branches: [master]
+    types:
+      - completed
 
 jobs:
   build_wheels:
