--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,8 +20,9 @@ jobs:
           python -m pip install --upgrade pip
           # pip install flake8 pytest
           pip install pytest
-          python setup.py egg_info
-          pip install -r *.egg-info/requires.txt
+          python setup.py install
+          # python setup.py egg_info
+          # pip install -r *.egg-info/requires.txt
           # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       # - name: Lint with flake8
       #   run: |
