--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -69,7 +69,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # pip install flake8 pytest
-          pip install python-easygraph
+
+          # install deps from PyPI, and EG from TestPyPI
+
+          python setup.py egg_info
+          pip install -r *.egg-info/requires.txt
+
+          pip install --index-url https://test.pypi.org/simple/ --no-deps python-easygraph
 
       - name: Check if the installation works
         run: python "${{ github.workspace }}/scripts/check_installation.py
