--- a/tox-conda-test.ini
+++ b/tox-conda-test.ini
@@ -1,6 +1,6 @@
 [tox]
 requires = tox-conda
-envlist = python3.6, python3.7, python3.8, python3.9
+envlist = py36, py37, py38, py39
 
 skipsdist = true
 
