--- a/tox-conda.ini
+++ b/tox-conda.ini
@@ -1,10 +1,14 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
+requires = tox-conda
 envlist = py36, py37, py38, py39
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
-deps = pytest
+deps = 
+    pytest
+    .
+
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest
