--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ envlist = py36, py37, py38, py39
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
-deps = pytest
+deps = 
+    .
+    pytest
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest
