fix: constraint install_requires

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # python-version: ["3.6", "3.7", "3.8", "3.9"]
-        python-version: ["3.8", "3.9"]
+        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        # python-version: ["3.8", "3.9"]
 
     steps:
       - uses: actions/checkout@v2
@@ -21,8 +21,10 @@ jobs:
           python -m pip install --upgrade pip
           # pip install flake8 pytest
           pip install pytest
-          pip install .
-          # python setup.py install
+          pip install Pillow
+          pip install kiwisolver
+          pip install tensorflow
+          python setup.py install
           # python setup.py egg_info
           # pip install -r *.egg-info/requires.txt
           # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
