--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -10,6 +10,7 @@ name: Build and upload to PyPI
 #     types:
 #       - published
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: ["Test the package with pytest"]
     branches: [master]
