--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ statsmodels = ">=0.12.0"
 progressbar = ">=2.5"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1.1"
+pytest = ">=5.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
