--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # pip install flake8 pytest
-          cd ${{ github.workspace }}/easygraph
+          cd ${{ github.workspace }}
           pip install pytest
           pip install .
           # python setup.py install
@@ -35,5 +35,5 @@ jobs:
       #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          cd ${{ github.workspace }}/easygraph
+          cd ${{ github.workspace }}
           pytest --disable-warnings
