--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -58,8 +58,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, windows-2019, macos-10.15]
-        # python-version: ["3.6", "3.7", "3.8", "3.9"]
-        python-version: ["3.8", "3.9"]
+        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        # python-version: ["3.8", "3.9"]
 
     steps:
       - uses: actions/checkout@v2
