fix: rename para to match gensim>=4.1.2

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,4 @@
 python_files = test_*.py
 
 # https://stackoverflow.com/questions/65090928/github-pytest-action-failing-to-import-from-tests-folder
-addopts = -rf --import-mode=importlib
+addopts = -rf 
