change diagram.yml to only run by manual trigger

--- a/.github/workflows/diagram.yml
+++ b/.github/workflows/diagram.yml
@@ -1,9 +1,9 @@
 name: Create diagram
 on:
   workflow_dispatch: {}
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
 jobs:
   get_data:
     runs-on: ubuntu-latest
