--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,4 @@
 [pytest]
-# https://stackoverflow.com/questions/53918088/import-file-mismatch-in-pytest
-python_files = test_*.py
-
-# https://stackoverflow.com/questions/65090928/github-pytest-action-failing-to-import-from-tests-folder
-addopts = -rf 
+# to speed up tests collection
+python_files = **/tests/test_*.py
+addopts=-ra --disable-warnings
