Fix other github actions

--- a/.github/workflows/archive/release-macos.yaml
+++ b/.github/workflows/archive/release-macos.yaml
@@ -1,27 +1,41 @@
 name: Build and Publish to PyPI (macOS)
-true: workflow_dispatch
+
+# on: push
+# disabled on push cuz Error: Container action is only supported on Linux
+# no solution found yet
+on: workflow_dispatch
+
 jobs:
   build-n-publish:
+    # name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
     name: Build and publish Python 🐍 distributions 📦 to PyPI
+    # runs-on: ubuntu-latest
     runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: 'Set up Python ${{ matrix.python-version }}'
-        uses: actions/setup-python@v2
-        with:
-          python-version: '${{ matrix.python-version }}'
-      - name: Install pypa/build
-        run: python -m pip install build --user
-      - name: Build a binary wheel and a source tarball
-        run: python -m build --sdist --wheel --outdir dist/ .
-      - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          password: '${{ secrets.PYPI_API_TOKEN }}'
     strategy:
       matrix:
-        python-version:
-          - 3.6
-          - 3.7
-          - 3.8
-          - 3.9
+        python-version: ["3.6", "3.7", "3.8", "3.9"]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install pypa/build
+        run: >-
+          python -m
+          pip install
+          build
+          --user
+      - name: Build a binary wheel and a source tarball
+        run: >-
+          python -m
+          build
+          --sdist
+          --wheel
+          --outdir dist/
+          .
+      - name: Publish distribution 📦 to PyPI
+        # if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
