Remove future import line added by isort and fix isort config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,7 +63,8 @@ repos:
       - id: isort
         name: "isort (python)"
         types: [python]
-        args: [--add-import, from __future__ import annotations]
+        args: []
+        # args: [--add-import, from __future__ import annotations]
         # exclude: |
         #   (?x)(
         #      ^(install|get)-poetry.py$
