tox: add py36, remove future imports from cluster.py

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 ; envlist = py36, py37, py38, py39
 ; py36 is really old https://endoflife.date/python
 ; and I can't install it on my machine without using pyenv.
-envlist = py37, py38, py39, py310
+envlist = py36, py37, py38, py39, py310
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
