update tox.ini to match master

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,19 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py36, py37, py38, py39
+; envlist = py36, py37, py38, py39
+; py36 is really old https://endoflife.date/python
+; and I can't install it on my machine without using pyenv.
+envlist = py36, py37, py38, py39, py310
 
 [testenv]
 # install pytest in the virtualenv where commands will be executed
-deps = 
-    .
+deps =
+    ; Pillow
+    ; kiwisolver
+    ; genism
+    lxml
     pytest
+    ; .
 commands =
     # NOTE: you can run any command line tool here - not just tests
     pytest
