--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,16 +22,17 @@ jobs:
         run: |
           python_version_abbr=${python_version//./}
           boost_version_alias=boost_${boost_version//./_}
-          apt-get install gcc -y
-          apt-get install g++ -y
+          sudo apt-get update
+          sudo apt-get install gcc -y
+          sudo apt-get install g++ -y
           wget https://boostorg.jfrog.io/artifactory/main/release/${boost_version}/source/${boost_version_alias}.tar.gz
           tar -xf ${boost_version_alias}.tar.gz
           cd ${boost_version_alias}
           ./bootstrap.sh --with-python=python
-          ./b2  cxxflags="-fPIC" install --with-python
+          sudo ./b2 cxxflags="-fPIC" install --with-python
           cd ${{ github.workspace }}
           
-          ln -s /usr/local/lib/libboost_python${python_version_abbr}.a /usr/local/lib/libboost_python.a
+          sudo ln -s /usr/local/lib/libboost_python${python_version_abbr}.a /usr/local/lib/libboost_python.a
           pip install pytest
           pip install Pillow
           pip install kiwisolver
