pre-commit: add actionlint

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -95,3 +95,9 @@ repos:
     rev: v1.6.9
     hooks:
       - id: actionlint
+
+  - repo: https://github.com/koalaman/shellcheck-precommit
+    rev: v0.8.0
+    hooks:
+      - id: shellcheck
+      # args: ["--severity=warning"]  # Optionally only show errors and warnings
