--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -10,6 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
+    - name: Install actionlint
+      # https://github.com/rhysd/actionlint/blob/main/docs/install.md
+      run: bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
+
     - uses: pre-commit/action@v3.0.0
       with:
         extra_args: "--all-files"
