--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
@@ -19,19 +19,19 @@ jobs:
           python_version: ${{ matrix.python-version }}
           boost_version: "1.79.0"
         run: |
-          python_version_abbr=${python_version//./}
-          boost_version_alias=boost_${boost_version//./_}
+          python_version_abbr="${python_version//./}"
+          boost_version_alias="boost_${boost_version//./_}"
           sudo apt-get update
           sudo apt-get install gcc -y
           sudo apt-get install g++ -y
-          wget https://boostorg.jfrog.io/artifactory/main/release/${boost_version}/source/${boost_version_alias}.tar.gz
-          tar -xf ${boost_version_alias}.tar.gz
-          cd ${boost_version_alias}
+          wget "https://boostorg.jfrog.io/artifactory/main/release/${boost_version}/source/${boost_version_alias}.tar.gz"
+          tar -xf "${boost_version_alias}.tar.gz"
+          cd "${boost_version_alias}"
           ./bootstrap.sh --with-python=python
           sudo ./b2 cxxflags="-fPIC" install --with-python
           cd ${{ github.workspace }}
           
-          sudo ln -s /usr/local/lib/libboost_python${python_version_abbr}.a /usr/local/lib/libboost_python.a
+          sudo ln -s "/usr/local/lib/libboost_python${python_version_abbr}.a" "/usr/local/lib/libboost_python.a"
           pip install pytest
           pip install Pillow
           pip install kiwisolver
@@ -39,15 +39,6 @@ jobs:
           pip install lxml
           python setup.py build_ext -l boost_python -L "/usr/local/lib" -I "/usr/local/include"
           python setup.py install
-          # python setup.py egg_info
-          # pip install -r *.egg-info/requires.txt
-          # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      # - name: Lint with flake8
-      #   run: |
-      #     # stop the build if there are Python syntax errors or undefined names
-      #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-      #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-      #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
           cd ${{ github.workspace }}
