--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -12,7 +12,9 @@ jobs:
     - uses: actions/setup-python@v3
     - name: Install actionlint
       # https://github.com/rhysd/actionlint/blob/main/docs/install.md
-      run: bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
+      run: |
+        bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
+        echo "$PWD" >> "$GITHUB_PATH"
 
     - uses: pre-commit/action@v3.0.0
       with:
