--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -96,9 +96,12 @@ repos:
     hooks:
       - id: actionlint
 
-  - repo: https://github.com/koalaman/shellcheck-precommit
-    rev: v0.8.0
-    hooks:
-      - id: shellcheck
-        # args: ["--severity=warning"]  # Optionally only show errors and warnings
-        args: ["--severity=error"]  # Optionally only show errors and warnings
+  # disabled
+  # reason:
+  # the check will never pass with @coreturn's scripts
+  # - repo: https://github.com/koalaman/shellcheck-precommit
+  #   rev: v0.8.0
+  #   hooks:
+  #     - id: shellcheck
+  #       # args: ["--severity=warning"]  # Optionally only show errors and warnings
+  #       args: ["--severity=error"]  # Optionally only show errors and warnings
