--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install Boost Python
         env:
           python_version: ${{ matrix.python-version }}
           boost_version: "1.79.0"
@@ -32,11 +32,15 @@ jobs:
           cd ${{ github.workspace }}
           
           sudo ln -s "/usr/local/lib/libboost_python${python_version_abbr}.a" "/usr/local/lib/libboost_python.a"
+      - name: Install dependencies
+        run: |
           pip install pytest
           pip install Pillow
           pip install kiwisolver
           pip install gensim
           pip install lxml
+      - name: Build and install easygraph
+        run: |
           python setup.py build_ext -l boost_python -L "/usr/local/lib" -I "/usr/local/include"
           python setup.py install
       - name: Test with pytest
