--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -10,6 +10,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v3
+    - name: Install shellcheck
+      # used by actionlint
+      run: |
+        sudo apt-get update
+        sudo apt-get install shellcheck -y
     - name: Install actionlint
       # https://github.com/rhysd/actionlint/blob/main/docs/install.md
       run: |
