--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,6 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
-        boost-version: ["1.79.0"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
@@ -18,27 +17,14 @@ jobs:
       - name: Install dependencies
         env:
           python_version: ${{ matrix.python-version }}
-          boost_version: ${{ matrix.boost-version }}
         run: |
-          python_version_abbr=${python_version//./}
-          boost_version_alias=boost_${boost_version//./_}
-          sudo apt-get update
-          sudo apt-get install gcc -y
-          sudo apt-get install g++ -y
-          wget https://boostorg.jfrog.io/artifactory/main/release/${boost_version}/source/${boost_version_alias}.tar.gz
-          tar -xf ${boost_version_alias}.tar.gz
-          cd ${boost_version_alias}
-          ./bootstrap.sh --with-python=python
-          sudo ./b2 cxxflags="-fPIC" install --with-python
           cd ${{ github.workspace }}
-          
-          sudo ln -s /usr/local/lib/libboost_python${python_version_abbr}.a /usr/local/lib/libboost_python.a
           pip install pytest
           pip install Pillow
           pip install kiwisolver
           pip install gensim
           pip install lxml
-          python setup.py build_ext -l boost_python -L "/usr/local/lib" -I "/usr/local/include"
+          python setup.py build_ext
           python setup.py install
           # python setup.py egg_info
           # pip install -r *.egg-info/requires.txt
