--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -11,11 +11,23 @@ name: Build and upload to PyPI
 #       - published
 on:
   workflow_dispatch:
+    inputs:
+      upload:
+        type: choice
+        description: "Where to upload built artifacts"
+        required: false
+        default: 'test_pypi'
+        options:
+          - "pypi"
+          - "test_pypi"
+          - "none"
   # workflow_run:
   #   workflows: ["Test the package with pytest"]
   #   branches: [master]
   #   types:
   #     - completed
+
+
 
 jobs:
   build_wheels:
@@ -83,33 +95,35 @@ jobs:
   #     - name: Check if the installation works
   #       run: python "${{ github.workspace }}/scripts/check_installation.py"
 
-  # upload_test_pypi:
-  #   name: Upload to Test PyPI
-  #   needs: [build_wheels, build_sdist]
-  #   runs-on: ubuntu-latest
-  #   # upload to PyPI on every tag starting with 'v'
-  #   # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
-  #   # if: startsWith(github.event.ref, 'refs/tags/v')
-  #   # alternatively, to publish when a GitHub Release is created, use the following rule:
-  #   # if: github.event_name == 'release' && github.event.action == 'published'
-  #   steps:
-  #     - uses: actions/download-artifact@v2
-  #       with:
-  #         name: artifact
-  #         path: dist
+  upload_test_pypi:
+    name: Upload to Test PyPI
+    if: inputs.upload == 'test_pypi'
+    needs: [build_wheels, build_sdist]
+    runs-on: ubuntu-latest
+    # upload to PyPI on every tag starting with 'v'
+    # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+    # if: startsWith(github.event.ref, 'refs/tags/v')
+    # alternatively, to publish when a GitHub Release is created, use the following rule:
+    # if: github.event_name == 'release' && github.event.action == 'published'
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: dist
 
-  #     - uses: pypa/gh-action-pypi-publish@v1.4.2
-  #       with:
-  #         user: __token__
-  #         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-  #         # To test: repository_url: https://test.pypi.org/legacy/
-  #         repository_url: https://test.pypi.org/legacy/
-  #         verbose: true
-  #         # print_hash: true
+      - uses: pypa/gh-action-pypi-publish@v1.4.2
+        with:
+          user: __token__
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          # To test: repository_url: https://test.pypi.org/legacy/
+          repository_url: https://test.pypi.org/legacy/
+          verbose: true
+          # print_hash: true
 
   upload_pypi:
     # name: Upload to PyPI if the latest release on Test PyPI passes the checks
     name: Upload to PyPI
+    if: inputs.upload == 'pypi'
     # needs: [build_wheels, build_sdist, upload_test_pypi, verify_installation]
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
