--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -56,7 +56,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build sdist
-        run: pipx run build --sdist
+        run: |
+          pip install pybind11
+          pipx run build --sdist
 
       - uses: actions/upload-artifact@v2
         with:
