--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -35,14 +35,20 @@ jobs:
     # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install build dependencies
+        run: |
+          python -m pip install pybind11 cibuildwheel
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.8.1
+        # uses: pypa/cibuildwheel@v2.8.1
+        run: |
+          cibuildwheel
 
       - uses: actions/upload-artifact@v2
         with:
