--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,33 +9,17 @@ jobs:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        env:
-          python_version: ${{ matrix.python-version }}
-        run: |
-          cd ${{ github.workspace }}
-          pip install pytest
-          pip install Pillow
-          pip install kiwisolver
-          pip install gensim
-          pip install lxml
-          python setup.py build_ext
-          python setup.py install
-          # python setup.py egg_info
-          # pip install -r *.egg-info/requires.txt
-          # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      # - name: Lint with flake8
-      #   run: |
-      #     # stop the build if there are Python syntax errors or undefined names
-      #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-      #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-      #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+      - name: 'Build and install easygraph - ${{ matrix.cpp-binding-framework }}'
+        uses: tddschn/install-easygraph@master
+        with:
+          # cpp-binding-framework: '${{ matrix.cpp-binding-framework }}'
+          easygraph-checkout-path: ''
+
       - name: Test with pytest
         run: |
-          cd ${{ github.workspace }}
           pytest --disable-warnings
