--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: 'Build and install easygraph - ${{ matrix.cpp-binding-framework }}'
+      - name: 'Build and install easygraph'
         uses: tddschn/install-easygraph@master
         with:
           # cpp-binding-framework: '${{ matrix.cpp-binding-framework }}'
