--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -6,7 +6,10 @@ on:
     
 jobs:
   trigger:
+    permissions: write-all
     name: "Trigger Teddy's benchmarking workflow"
     uses: tddschn/easygraph-bench/.github/workflows/bench-all.yaml@master
+    secrets:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     with:
       releaseTag: "CI-easygraph-bench"
