--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,8 +16,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: 'Build and install easygraph'
-        uses: tddschn/install-easygraph@v0.3.1
+      - name: Install EasyGraph
+        uses: tddschn/install-easygraph@v0.4.0
+
 
       - uses: actions/checkout@v3
       - name: Test with pytest
