--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,9 +16,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install EasyGraph
-        uses: tddschn/install-easygraph@v0.4.0
-
+      - name: 'Build and install easygraph'
+        uses: tddschn/install-easygraph@master
+        with:
+          # use current repo
+          repository: '${{ github.repository }}'
+          # use current branch
+          ref: '${{ github.ref }}'
+          install-pytorch: 'true'
+          install-lxml: 'true'
 
       - uses: actions/checkout@v3
       - name: Test with pytest
