--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,16 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: 'Build and install easygraph'
-        uses: tddschn/install-easygraph@v0.3.1
+        # still investigating issues, use the dummy workflow for now
+        # uses: tddschn/install-easygraph@master
+        uses: tddschn/install-easygraph/dummy@master
+        with:
+          # use current repo
+          repository: '${{ github.repository }}'
+          # use current branch
+          ref: '${{ github.ref }}'
+          install-pytorch: 'true'
+          install-lxml: 'true'
 
       - uses: actions/checkout@v3
       - name: Test with pytest
