--- a/.github/workflows/cibw-pybind11.yaml
+++ b/.github/workflows/cibw-pybind11.yaml
@@ -33,7 +33,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Build SDist
-      run: pipx run build --sdist
+      run: |
+        pip install pybind11
+        pipx run build --sdist
 
     - name: Check metadata
       run: pipx run twine check dist/*
