pyproject.toml: specify build deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -157,15 +157,12 @@ force-exclude = '''
 
 [tool.coverage.run]
 branch = true
-source = [ "easygraph/"]
+source = ["easygraph/"]
 relative_files = true
 
 
 [tool.coverage.report]
-exclude_lines = [
-    "pragma: no cover",
-    "if TYPE_CHECKING:"
-]
+exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
 
 
 [tool.cibuildwheel]
@@ -173,3 +170,9 @@ exclude_lines = [
 before-all = "pip install pybind11"
 test-requires = "pytest"
 test-command = "pytest"
+
+# https://cibuildwheel.readthedocs.io/en/stable/faq/#cibw-options-alternatives-deps
+[build-system]
+requires = ["setuptools>=42", "wheel", "Cython", "pybind11"]
+
+build-backend = "setuptools.build_meta"
