--- a/.github/workflows/release-cibuildwheel.yaml
+++ b/.github/workflows/release-cibuildwheel.yaml
@@ -40,17 +40,19 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Install build dependencies
-        run: |
-          python -m pip install pybind11 cibuildwheel
+      # - name: Install build dependencies
+      #   run: |
+      #     python -m pip install pybind11 cibuildwheel
       - name: Build wheels
-        # uses: pypa/cibuildwheel@v2.8.1
+        uses: pypa/cibuildwheel@v2.8.1
         env:
-          CIBW_BEFORE_ALL: python -m pip install pybind11
-        run: |
-          cibuildwheel
+          # CIBW_BEFORE_ALL: python -m pip install pybind11
+          # CIBW_TEST_SKIP: "*"
+          CIBW_TEST_COMMAND: pytest --disable-warnings {package}
+        # run: |
+        #   cibuildwheel
 
       - uses: actions/upload-artifact@v2
         with:
