--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,8 +168,8 @@ exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
 [tool.cibuildwheel]
 # before-build = "pip install pybind11"
 before-all = "pip install pybind11"
-test-requires = "pytest"
-test-command = "pytest"
+test-requires = ["pytest", "lxml", "torch"]
+# test-command = "pytest"
 
 # https://cibuildwheel.readthedocs.io/en/stable/faq/#cibw-options-alternatives-deps
 [build-system]
